MDEV-7833:ANALYZE FORMAT=JSON and Range checked for each record